# playwLeft

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/browser/: browser_impl.rs  context.rs  launcher.rs  mod.rs
crates/core/src/element/: element_impl.rs  mod.rs
crates/core/src/network/: mod.rs  request.rs  response.rs  route.rs
crates/core/src/page/: frame_impl.rs  mod.rs  page_impl.rs
crates/core/src/protocol/: mod.rs  session.rs  transport.rs  types.rs
crates/python/: Cargo.toml
crates/python/src/: lib.rs
examples/: agent_workflow.py  basic_navigation.py  web_scraping.py
python/playleft/: __init__.py  _core.pyi
python/playwleft/: __init__.py
tests/: test_smoke.py
