[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/python",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/CocoRoF/playwLeft"
description = "Agent-first browser automation toolkit built in Rust"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
url = { version = "2", features = ["serde"] }
