[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "playleft"
version = "0.1.0"
description = "Agent-first browser automation toolkit — Playwright alternative built in Rust"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
keywords = ["browser", "automation", "agent", "rust", "cdp"]

[project.urls]
Repository = "https://github.com/user/playleft"
Documentation = "https://github.com/user/playleft/wiki"

[tool.maturin]
manifest-path = "crates/python/Cargo.toml"
module-name = "playleft._core"
python-source = "python"
features = ["pyo3/extension-module"]
