[package]
name = "playleft-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for playwLeft"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
playleft-core = { path = "../core" }
tokio = { workspace = true }
serde_json = { workspace = true }
